<resources>
    <string name="app_name">Calculator</string>
    <string name="button_remove_last_number">CE</string>
    <string name="button_remove_all">C</string>
    <string name="button_division">/</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_multiplication">*</string>
    <string name="button_four">4</string>
    <string name="button_three">3</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_two">2</string>
    <string name="button_one">1</string>
    <string name="button_substraction">-</string>
    <string name="button_sum">+</string>
    <string name="button_equality">=</string>
    <string name="button_zero">0</string>
    <string name="button_negation">+/-</string>
    <string name="button_dot">.</string>
    <string name="default_numeric_value">0</string>
    <string name="button_delete">DEL</string>
</resources>